efk/templates/elasticsearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: elasticsearch
    namespace: efk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:8.10.2
          ports:
            - containerPort: 9200
          resources:
            limits:
              memory: "2Gi"
