efk/templates/efk-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: efk-service
    namespace: efk
    labels:
      app: efk-app
spec:
  type: NodePort
  selector:
    app: efk-app
  ports:
    - port: 8080
      targetPort: 8080
